added 'add new dentist' to timeslots api
